syntax = "proto3";

option go_package = "github.com/DuarteMRAlves/maestro/test/pb";

package pb;

service ExtraService {
  rpc ExtraMethod(ExtraRequest) returns (ExtraReply);
}

message ExtraRequest {
  repeated string repeatedStringField = 1;
  ExtraInnerMessage innerMsg = 2;
}

message ExtraReply {
  oneof oneOfField {
    int64 intOpt = 1;
    ExtraInnerMessage extraInnerMsg = 2;
  }
  repeated double repeatedDoubleField = 3;
}

message ExtraInnerMessage {
  repeated string repeatedString = 1;
}